[gd_scene load_steps=6 format=3 uid="uid://bcp1oa2pvsg53"]

[ext_resource type="Script" path="res://scripts/ticket_checking.gd" id="1_t46k4"]
[ext_resource type="Texture2D" uid="uid://b4d0qpaduuk57" path="res://sprites/ticket_checking/ticket_checking_background.png" id="2_sjklk"]
[ext_resource type="Texture2D" uid="uid://dirhmvdqoqdlr" path="res://sprites/ticket_checking/ticket_checking_clipboard.png" id="3_6hxu0"]
[ext_resource type="Texture2D" uid="uid://cyt6kqo8gm4ul" path="res://sprites/ticket_checking/ticket_checking_valid_ticket.png" id="4_v77in"]
[ext_resource type="Texture2D" uid="uid://u5tf31jqlbux" path="res://sprites/ticket_checking/ticket_checking_hand_3.png" id="5_50iy7"]

[node name="ticket_checking" type="Node2D"]
script = ExtResource("1_t46k4")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_sjklk")

[node name="clipboard" type="Sprite2D" parent="."]
position = Vector2(1020, 642)
texture = ExtResource("3_6hxu0")

[node name="ticket" type="Sprite2D" parent="."]
position = Vector2(840, 672)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_v77in")

[node name="hand" type="Sprite2D" parent="."]
position = Vector2(467, 283)
texture = ExtResource("5_50iy7")

[node name="yea_button" type="Button" parent="."]
light_mask = 0
visibility_layer = 0
offset_left = 1355.0
offset_top = 480.0
offset_right = 1755.0
offset_bottom = 680.0
rotation = -0.270526

[node name="nay_button" type="Button" parent="."]
light_mask = 0
visibility_layer = 0
offset_left = 1429.0
offset_top = 767.0
offset_right = 1829.0
offset_bottom = 967.0
rotation = -0.270526

[connection signal="pressed" from="yea_button" to="." method="_on_yea_button_pressed"]
[connection signal="pressed" from="nay_button" to="." method="_on_nay_button_pressed"]
